--- a/src/app.css
+++ b/src/app.css
@@ -82,3 +82,50 @@ html.dark .nav__text:focus {
 	background-color: #f9fafb;
 	color: #2d3748;
 }
+
+.moving-gradient-1 {
+	--gradient-1: linear-gradient(45deg, #818cf8, #60a5fa, #6ee7b7, #60a5fa, #818cf8);
+	background-image: var(--gradient-1);
+	background-size: 400% 400%;
+	background-position: top;
+	animation: gradient-animation-y 7s infinite ease-in-out;
+}
+
+.moving-gradient-2 {
+	--gradient-2: linear-gradient(45deg, #f87171, #a78bfa, #f87171, #a78bfa, #f87171);
+	background-image: var(--gradient-2);
+	background-size: 400% 400%;
+	background-position: top;
+	animation: gradient-animation-y 7s infinite ease-in-out;
+}
+
+.moving-gradient-x {
+	background-size: 500%;
+	background-position: left;
+	animation: gradient-animation-x 10s infinite alternate;
+}
+
+.moving-gradient-x:hover,
+.moving-gradient-x:focus {
+	animation: gradient-animation-x 2s infinite alternate;
+}
+
+@keyframes gradient-animation-y {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+@keyframes gradient-animation-x {
+	0% {
+		background-position: left;
+	}
+	100% {
+		background-position: right;
+	}
+}
